--- a/.env.sample
+++ b/.env.sample
@@ -23,3 +23,12 @@ DATASET=taxifare_dataset
 
 # Compute Engine
 INSTANCE=taxi-instance
+
+# Model Lifecycle
+MLFLOW_TRACKING_URI=https://mlflow.lewagon.ai
+MLFLOW_EXPERIMENT=taxifare_experiment_<user.github_nickname>
+MLFLOW_MODEL_NAME=taxifare_<user.github_nickname>
+
+PREFECT_BACKEND=development
+PREFECT_FLOW_NAME=taxifare_lifecycle_<user.github_nickname>
+PREFECT_LOG_LEVEL=WARNING
